auth-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: hola
spec:
  replicas: 1
  selector:
    matchLabels:
      role: auth
  template:
    metadata:
      labels:
        role: auth
    spec:
      containers:
      - name: auth-service
        image: eugeele/covachapp:auth-service
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: hola
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    role: auth
