front-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      role: front
  template:
    metadata:
      labels:
        role: front
    spec:
      containers:
      - name: front
        image: eugeele/covachapp:frontend
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  type: ClusterIp
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    role: front
