products-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: hola
spec:
  replicas: 1
  selector:
    matchLabels:
      role: products
  template:
    metadata:
      labels:
        role: products
    spec:
      containers:
      - name: products-service
        image: gfs5/challenge:products
        # env:
        # - name: FASTAPI_PORT
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: FASTAPI_PORT
        # - name: POSTGRES_PASSWORD
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_PASSWORD
        # - name: POSTGRES_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_HOST
        # - name: POSTGRES_PORT
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_PORT
        # - name: POSTGRES_DB
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_DB
        # - name: RABBITMQ_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: RABBITMQ_URL
        # - name: DATABASE_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: DATABASE_URL
        # - name: AUTH_SERVICE_BASE_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: AUTH_SERVICE_BASE_URL 
        ports:
        - containerPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: hola
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    role: products

---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: products-cfgmp
#   namespace: hola
# data:
#   FASTAPI_PORT: "8001"
#   POSTGRES_PASSWORD: "postgres"
#   POSTGRES_HOST: "products-db"
#   POSTGRES_PORT: "5432"
#   POSTGRES_DB: "products"
#   RABBITMQ_URL: "amqps://YOUR_AMPQ_KEY_URL_GOES_HERE"
#   DATABASE_URL: "postgresql+asyncpg://postgres:postgres@products-db:5432/postgres"
#   AUTH_SERVICE_BASE_URL: "http://auth-service:8000"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db
  namespace: hola
spec:
  replicas: 1
  selector:
    matchLabels:
      role: products
  template:
    metadata:
      labels:
        role: products
    spec:
      containers:
      - name: products-bd
        image: postgres:14.1-alpine3.15
        # env:
        # - name: FASTAPI_PORT
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: FASTAPI_PORT
        # - name: POSTGRES_PASSWORD
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_PASSWORD
        # - name: POSTGRES_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_HOST
        # - name: POSTGRES_PORT
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_PORT
        # - name: POSTGRES_DB
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: POSTGRES_DB
        # - name: RABBITMQ_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: RABBITMQ_URL
        # - name: DATABASE_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: DATABASE_URL
        # - name: AUTH_SERVICE_BASE_URL
        #   valueFrom:
        #     configMapKeyRef:
        #       name: products-cfgmp
        #       key: AUTH_SERVICE_BASE_URL 
        ports:
        - containerPort: 5433
