search-consumer-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
      - name: search-consumer
        image: eugeele/covachapp:search-consumer
        ports:
        - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: search-consumer
spec:
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    role: app
