ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
spec:
  rules:
  - http:
      backend:
        service:
          name: auth
          port:
            number: 8000
